--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ DTO/__pycache__/
 metier/__pycache__/
 test/__pycache__/
 modele/__pycache__/
+DTO/usagerDTO_BACKUP_668.py
+DTO/usagerDTO_BASE_668.py
+DTO/usagerDTO_LOCAL_668.py
+DTO/usagerDTO_REMOTE_668.py
