--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ DTO/usagerDTO_BACKUP_668.py
 DTO/usagerDTO_BASE_668.py
 DTO/usagerDTO_LOCAL_668.py
 DTO/usagerDTO_REMOTE_668.py
+.vscode/settings.json
